# todo_list

./: .gitignore  INSTALL.md  LICENSE  Makefile  README.md
backend/: .isort.cfg
backend/app_envs/: django.env.example  django.examle.env  postgres.example.env
backend/core/: Dockerfile  pyproject.toml
backend/core/api/base/: mixins.py  permissions.py  urls.py  viewsets.py
backend/core/api/v1/: urls.py
backend/core/api/v1/auth_users/: handlers.py  routers.py  urls.py
backend/core/api/v1/tasks/: handlers.py  routers.py  serializers.py  urls.py
backend/core/apps/auth_users/: admin.py  models.py  tests.py
backend/core/apps/auth_users/migrations/: 0001_initial.py
backend/core/apps/tasks/: admin.py  models.py  tests.py
backend/core/apps/tasks/migrations/: 0001_initial.py
backend/core/tests/auth_users/: api_tests.py
backend/core/tests/auth_users/fixtures/: users.json
backend/core/tests/tasks/: api_tests.py
backend/core/tests/tasks/fixtures/: create_tasks_201.json  update_tasks_200.json
backend/core/todo_list/: settings.py  urls.py
docker_compose/: docker-compose.yaml
docker_compose/envs/: dc_file.example.env
